# ai-virtual-finance

./: .coveragerc  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  TASK.md  TROUBLESHOOTING.md  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
config/: context.yaml.example  fee_schedule.yaml.example  persistence.yaml.example  providers.yaml.example
src/: __init__.py  __main__.py  main.py
src/agent/: core.py  models.py  orchestrator.py
src/analytics/: leaderboard.py  metrics.py
src/config/: __init__.py  loader.py
src/engine/: __init__.py
src/loan/: __init__.py  manager.py  models.py
src/persistence/: __init__.py  checkpoint.py  database.py
src/tui/: app.py
src/validator/: engine.py
tests/: conftest.py
tests/test_agent/: test_agent_core.py  test_orchestrator.py
tests/test_context/: test_context_manager.py
tests/test_data/: test_cache.py  test_ccxt_provider.py  test_trading_calendar.py  test_yfinance_provider.py
tests/test_engine/: test_fee.py  test_market_state.py  test_order_book.py  test_portfolio.py  test_settlement.py
tests/test_integration/: test_end_to_end.py  test_leaderboard.py  test_persistence_integration.py
tests/test_loan/: test_loan_manager.py
tests/test_persistence/: test_checkpoint.py  test_database.py
tests/test_tui/: test_app.py  test_screens.py
tests/test_validator/: test_order_rules.py  (+1 more)
(+27 files in other folders)
