[tool.poetry]
name = "ai-virtual-finance"
version = "0.1.0"
description = "AI Virtual Finance - A terminal-based virtual finance simulation platform"
readme = "README.md"
license = "MIT"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
textual = ">=0.47.0"
rich = ">=13.7.0"
pydantic = ">=2.5.0"
pyyaml = ">=6.0.1"
httpx = ">=0.26.0"
yfinance = ">=0.2.35"
ccxt = ">=4.2.0"
aiosqlite = ">=0.19.0"
click = ">=8.1.7"
typing-extensions = ">=4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.23.0"
hypothesis = ">=6.97.0"
mypy = ">=1.8.0"
ruff = ">=0.1.14"
pyinstaller = ">=6.3.0"
build = ">=1.0.3"
pre-commit = ">=3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --randomly-seed=42"
